# django-app

./: .gitignore  README.md  pyproject.toml
liftapp/: apps.py  manage.py  models.py  urls.py  views.py
liftapp/liftapp/: asgi.py  settings.py  urls.py  wsgi.py
liftapp/migrations/: 0001_initial.py
project/: settings.py  urls.py
