[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["nandinirai444 <nandini.rai@loopr.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
django-extensions = "^3.2.3"
django-rest-swagger = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
